# NeuralOdeStudio

./: .gitignore  CMakeLists.txt  README.md
src/backend/: CMakeLists.txt
src/backend/include/backend/: i_trainer.h
src/backend/src/: cpu_trainer.cpp  cuda_trainer.cu
src/core/: CMakeLists.txt
src/core/include/core/: matrix.h  neural_network.h  rk4_solver.h
src/core/src/: neural_network.cpp
src/datagen/src/: generate_data.cpp
src/gui/src/: application.cpp  main.cpp
